fix: set z-index of Header to 999

--- a/components/Header/Header/Header.module.scss
+++ b/components/Header/Header/Header.module.scss
@@ -6,7 +6,7 @@
 	flex: 1;
 	height: 64px;
 	position: fixed;
-	z-index: 2;
+	z-index: 999;
 	top: 0;
 	right: 0;
 	left: 0;
